fixing spacing on p elements

--- a/public/workout.css
+++ b/public/workout.css
@@ -47,6 +47,7 @@ p {
 }
 
 #error-message {
+	display: inline;
 	color: red;
 	margin-left: 15px;
 }
